5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1667_2324.log
== TEST (2019-04-16 16:06:28) 
-- CODE:
x=input("nome do bruxo[MINERVA OU BELATRIX]: ")
E1=10.7654
T1=0.3479
E2=10.674
T2=1.789


if x="MINERVA".upper():
	mensagem=(E1*T1)	
else:
	mensagem=(E2*T2)
	
print(mensagem)
-- ERROR:
File "XXXX", line 8
    if x="MINERVA".upper():
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:06:32) 
-- CODE:
x=input("nome do bruxo[MINERVA OU BELATRIX]: ")
E1=10.7654
T1=0.3479
E2=10.674
T2=1.789


if x="MINERVA".upper():
	mensagem=(E1*T1)	
else:
	mensagem=(E2*T2)
	
print(mensagem)
-- ERROR:
File "XXXX", line 8
    if x="MINERVA".upper():
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:06:37) 
-- CODE:
x=input("nome do bruxo[MINERVA OU BELATRIX]: ")
E1=10.7654
T1=0.3479
E2=10.674
T2=1.789


if x="MINERVA".upper():
	mensagem=(E1*T1)	
else:
	mensagem=(E2*T2)
	
print(mensagem)
-- EXECUTION TIME:
0.0334091
-- ERROR:
Error response from daemon: Container addab4b1f0ffd87b885f21f1d3a6a8bb894711e3e930d93fb0c0826a85cb8c19 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:06:38) 
-- CODE:
x=input("nome do bruxo[MINERVA OU BELATRIX]: ")
E1=10.7654
T1=0.3479
E2=10.674
T2=1.789


if x="MINERVA".upper():
	mensagem=(E1*T1)	
else:
	mensagem=(E2*T2)
	
print(mensagem)
-- ERROR:
File "XXXX", line 8
    if x="MINERVA".upper():
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:07:26) 
-- CODE:
x=input("nome do bruxo[MINERVA OU BELATRIX]: ")
E1=10.7654
T1=0.3479
E2=10.674
T2=1.789


if x="MINERVA".upper():
	mensagem=(E1*T1)	
else:
	mensagem=(E2*T2)
	
print(mensagem)
-- ERROR:
File "XXXX", line 8
    if x="MINERVA".upper():
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:07:40) 
-- CODE:
x=input("nome do bruxo[MINERVA OU BELATRIX]: ")
E1=10.7654
T1=0.3479
E2=10.674
T2=1.789


if x="MINERVA".upper():
	mensagem=(E1*T1)	
else:
	mensagem=(E2*T2)
	
print(mensagem)
-- ERROR:
File "XXXX", line 8
    if x="MINERVA".upper():
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:31) 
-- CODE:
x=input("nome do bruxo[MINERVA OU BELATRIX]: ")
E1=10.7654
T1=0.3479
E2=10.674
T2=1.789


if x="MINERVA".upper():
	mensagem=(E1*T1)	
else:
	mensagem=(E2*T2)
	
print(mensagem)
-- ERROR:
File "XXXX", line 8
    if x="MINERVA".upper():
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:08:35) 
-- CODE:
x=input("nome do bruxo[MINERVA OU BELATRIX]: ")
E1=10.7654
T1=0.3479
E2=10.674
T2=1.789


if x="MINERVA".upper():
	mensagem=(E1*T1)	
else:
	mensagem=(E2*T2)
	
print(mensagem)
-- EXECUTION TIME:
0.0262859
-- ERROR:
Error response from daemon: Container addab4b1f0ffd87b885f21f1d3a6a8bb894711e3e930d93fb0c0826a85cb8c19 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:35) 
-- CODE:
x=input("nome do bruxo[MINERVA OU BELATRIX]: ")
E1=10.7654
T1=0.3479
E2=10.674
T2=1.789


if x="MINERVA".upper():
	mensagem=(E1*T1)	
else:
	mensagem=(E2*T2)
	
print(mensagem)
-- ERROR:
File "XXXX", line 8
    if x="MINERVA".upper():
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:13) 
-- CODE:
x=input("nome do bruxo[MINERVA OU BELATRIX]: ")
E1=10.7654
T1=0.3479
E2=10.674
T2=1.789


if x="MINERVA".upper():
	mensagem=(E1*T1)	
else:
	mensagem=(E2*T2)
	
print(mensagem)
-- ERROR:
File "XXXX", line 8
    if x="MINERVA".upper():
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:32) 
-- CODE:
x=input("nome do bruxo[MINERVA OU BELATRIX]: ")

E1=10.7654
T1=0.3479
E2=10.674
T2=1.789


if x="MINERVA".upper():
	mensagem=(E1*T1)	
else:
	mensagem=(E2*T2)
	
print(mensagem)
-- ERROR:
File "XXXX", line 9
    if x="MINERVA".upper():
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:56) 
-- CODE:
x=input("nome do bruxo[MINERVA OU BELATRIX]: ")

E1=10.7654
T1=0.3479
E2=10.674
T2=1.789


if x="MINERVA".upper():
	mensagem=(E1/T1)	
else:
	mensagem=(E2/T2)
	
print(mensagem)
-- ERROR:
File "XXXX", line 9
    if x="MINERVA".upper():
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:15) 
-- CODE:
x=input("nome do bruxo[MINERVA OU BELATRIX]: ")

E1=10.7654
T1=0.3479
E2=10.674
T2=1.789


if x = "MINERVA".upper():
	mensagem=(E1/T1)	
else:
	mensagem=(E2/T2)
	
print(mensagem)
-- ERROR:
File "XXXX", line 9
    if x = "MINERVA".upper():
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:38) 
-- CODE:
x=input("nome do bruxo[MINERVA OU BELATRIX]: ")

E1=10.7654
T1=0.3479
E2=10.674
T2=1.789
vm1=E1/T1
vm2=E2/T2
if x = "MINERVA":
	mensagem=(vm1)	
else:
	mensagem=(vm2)
	
print(mensagem)
-- ERROR:
File "XXXX", line 9
    if x = "MINERVA":
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:54) 
-- CODE:
x=input("nome do bruxo: ")

E1=10.7654
T1=0.3479
E2=10.674
T2=1.789
vm1=E1/T1
vm2=E2/T2
if x = "MINERVA":
	mensagem=(vm1)	
else:
	mensagem=(vm2)
	
print(mensagem)
-- ERROR:
File "XXXX", line 9
    if x = "MINERVA":
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:03) 
-- CODE:
x=input("nome do bruxo: ")

E1=10.7654
T1=0.3479
E2=10.674
T2=1.789
vm1=E1/T1
vm2=E2/T2
if x == "MINERVA":
	mensagem=(vm1)	
else:
	mensagem=(vm2)
	
print(mensagem)
-- OUTPUT:
5.966461710452767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:19) 
-- CODE:
x=input("nome do bruxo: ")

E1=10.7654
T1=0.3479
E2=10.674
T2=1.789
vm1=E1/T1
vm2=E2/T2
if x == "MINERVA".upper():
	mensagem=(vm1)	
else:
	mensagem=(vm2)
	
print(mensagem)
-- OUTPUT:
5.966461710452767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:42) 
-- CODE:
x=input("nome do bruxo: ")

E1=10.7654
T1=0.3479
E2=10.674
T2=1.789
vm1=T1/
vm2=T2
if (x.upper()) == "MINERVA":
	mensagem=(vm1)	
else:
	mensagem=(vm2)
	
print(mensagem)
-- ERROR:
File "XXXX", line 7
    vm1=T1/
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:51) 
-- CODE:
x=input("nome do bruxo: ")

E1=10.7654
T1=0.3479
E2=10.674
T2=1.789
vm1=T1/
vm2=T2
if x.upper() == "MINERVA":
	mensagem=(vm1)	
else:
	mensagem=(vm2)
	
print(mensagem)
-- ERROR:
File "XXXX", line 7
    vm1=T1/
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:10) 
-- CODE:
x=input("nome do bruxo: ".upper())

E1=10.7654
T1=0.3479
E2=10.674
T2=1.789
vm1=T1/
vm2=T2
if x == "MINERVA":
	mensagem=(vm1)	
else:
	mensagem=(vm2)
	
print(mensagem)
-- ERROR:
File "XXXX", line 7
    vm1=T1/
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:38) 
-- CODE:
x=input("nome do bruxo: ".upper())

E1=10.7654
T1=0.3479
E2=10.674
T2=1.789
vm1=T1/E1
vm2=T2/E2
if x == "MINERVA":
	mensagem=(vm1)	
else:
	mensagem=(vm2)
	
print(mensagem)
-- OUTPUT:
NOME DO BRUXO: 0.16760352257822747
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:57) 
-- CODE:
x=input("nome do bruxo: ")

E1=10.7654
T1=0.3479
E2=10.674
T2=1.789
vm1=T1/E1
vm2=T2/E2
if x.upper() == "MINERVA":
	mensagem=(vm1)	
else:
	mensagem=(vm2)
	
print(mensagem)
-- OUTPUT:
0.16760352257822747
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:33) 
-- CODE:
x=input("nome do bruxo: ")

E1=10.7654
T1=0.3479
E2=10.674
T2=1.789
vm1=E1/T1
vm2=E1/T2
if x.upper() == "MINERVA":
	mensagem=(vm1)	
else:
	mensagem=(vm2)
	
print(mensagem)
-- OUTPUT:
6.0175517048630525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:17:38) 
-- CODE:
x=input("nome do bruxo: ")

E1=10.7654
T1=0.3479
E2=10.674
T2=1.789
vm1=E1/T1
vm2=E1/T2
if x.upper() == "MINERVA":
	mensagem=(vm1)	
else:
	mensagem=(vm2)
	
print(mensagem)
-- EXECUTION TIME:
0.145875
-- TEST CASE 1:
---- input:
BELATRIX
---- correct output:
5.966461710452767
---- user output:
6.0175517048630525
-- TEST CASE 2:
---- input:
MINERVA
---- correct output:
30.943949410750214
---- user output:
30.943949410750214
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:52) 
-- CODE:
x=input("nome do bruxo: ")

E1=10.7654
T1=0.3479
E2=10.674
T2=1.789
vm1=E1/T1
vm2=E1/T2
if x.upper() == "MINERVA":
	mensagem=(vm1)	
else:
	mensagem=(vm2)
	
print(mensagem)
-- OUTPUT:
6.0175517048630525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:18:00) 
-- CODE:
x=input("nome do bruxo: ")

E1=10.7654
T1=0.3479
E2=10.674
T2=1.789
vm1=E1/T1
vm2=E2/T2
if x.upper() == "MINERVA":
	mensagem=(vm1)	
else:
	mensagem=(vm2)
	
print(mensagem)
-- EXECUTION TIME:
0.180056
-- TEST CASE 1:
---- input:
BELATRIX
---- correct output:
5.966461710452767
---- user output:
5.966461710452767
-- TEST CASE 2:
---- input:
MINERVA
---- correct output:
30.943949410750214
---- user output:
30.943949410750214
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
